--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,77 @@
-streamlit>=1.30.0
-python-dotenv>=1.0.0
-google-auth>=2.26.0
-google-auth-oauthlib>=1.2.0
-google-api-python-client>=2.100.0
-slack-sdk>=3.26.0
-PyPDF2>=3.0.0
-openai>=1.0.0
-azure-core>=1.30.0
-azure-search-documents>=11.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+azure-common==1.1.28
+azure-core==1.32.0
+azure-search-documents==11.5.2
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
+exceptiongroup==1.2.2
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.1
+google-api-python-client==2.162.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.68.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+isodate==0.7.2
+Jinja2==3.1.5
+jiter==0.8.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.28.0
+numpy==2.0.2
+oauthlib==3.2.2
+openai==1.64.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.1
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.23.1
+rsa==4.9
+six==1.17.0
+slack_sdk==3.34.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.42.2
+tenacity==9.0.0
+tiktoken==0.9.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
